--- a/styles.css/architect.css
+++ b/styles.css/architect.css
@@ -1,6 +1,73 @@
 /*  worksans font */
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
+/* ! global styles */
 * {
   font-family: "Work Sans", sans-serif;
+}
+
+.btn-primary {
+  background-color: #ff900e;
+  font-size: 1.25rem;
+  border: none;
+  border-radius: 8px;
+  padding: 20px 25px;
+  font-weight: 600;
+  color: #fff;
+}
+
+/* ! header styles */
+header {
+  background-color: rgba(255, 144, 14, 0.1);
+  padding: 50px 240px;
+}
+
+/* *  navbar styles */
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-title {
+  color: #131313;
+  font-size: 2.8125rem;
+  font-weight: bold;
+}
+
+nav > ul {
+  display: flex;
+}
+
+nav li {
+  list-style: none;
+  margin-right: 30px;
+  font-weight: 500;
+  font-size: 1.125rem;
+}
+
+nav li a {
+  text-decoration: none;
+  color: #424242;
+}
+
+/* * banner styles */
+.banner-content {
+  max-width: 800px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.banner-title {
+  font-size: 4rem;
+  color: #131313;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.banner-description {
+  font-size: 1rem;
+  line-height: 1.63;
+  color: #727272;
+  margin-bottom: 32px;
 }
