--- a/styles.css/architect.css
+++ b/styles.css/architect.css
@@ -161,6 +161,23 @@ main {
   margin-top: 5px;
 }
 
+/* * sponsors styles */
+.sponsors {
+  text-align: center;
+}
+
+.sponsors-image-container {
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 40px;
+}
+
+.sponsors-image-container img {
+  width: 165px;
+}
+
 /* !,
 !,
 !,
@@ -175,7 +192,9 @@ main {
   }
 
   nav,
-  .teams-container {
+  .teams-container,
+  .facts-card-container,
+  .sponsors-image-container {
     flex-direction: column;
   }
 
@@ -183,10 +202,20 @@ main {
     grid-template-columns: 1fr;
   }
 
-  .teams-content {
+  .teams-content,
+  .facts-card-container {
     padding: 20px;
   }
+
+  .facts-card-container {
+    gap: 20px;
+  }
 }
+
+/*  */
+/*  */
+/*  */
+/*  */
 
 /* * medium devices */
 @media screen and (min-width: 576px) and (max-width: 960px) {
@@ -195,7 +224,8 @@ main {
   }
 
   nav,
-  .teams-container {
+  .teams-container,
+  .sponsors-image-container {
     flex-direction: column;
   }
 }
