--- a/styles.css/architect.css
+++ b/styles.css/architect.css
@@ -130,6 +130,42 @@ main {
   line-height: 1.63;
 }
 
+/* * features styles */
+.features {
+  margin-top: 130px;
+  display: flex;
+  gap: 100px;
+}
+
+.feature-content .section-title {
+  border-left: 5px solid #ff900e;
+  padding-left: 20px;
+}
+
+.feature-content .card {
+  border-radius: 8px;
+  box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+  background-color: #fff;
+  padding: 30px 42px 30px 30px;
+  margin-bottom: 20px;
+}
+
+.ten-years-badge {
+  border-radius: 8px;
+  background-color: #ff900e;
+  color: #fff;
+  width: 342px;
+  padding: 40px;
+}
+
+.ten-years-badge h2 {
+  font-size: 4rem;
+}
+
+.ten-years-badge p {
+  font-size: 1.5625rem;
+}
+
 /* * facts styles */
 .facts .section-title {
   margin-bottom: 24px;
